# reversible-name-atlas

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: CODEX_BUILD_LOG.md  LIMITATIONS.md  PREEXISTING_WORK.md  SUBMISSION_PACKAGE.md
gateway/: README.md  wrangler.jsonc
gateway/src/: contracts.ts  device-session.ts  gateway.ts  index.ts  oauth-return.ts  public-discovery.ts  public-invocation.ts
gateway/test/: oauth-return.test.ts  protocol.test.ts  response-codec.test.ts  worker.test.ts
packaging/assets/: Foldweave.icns
plugins/foldweave/.codex-plugin/: plugin.json
sample_data/: README.md
sample_data/connected_change/: README.md
sample_data/folder_a1/: .env.example  brief.md
sample_data/folder_a1/assets/: budget.csv
sample_data/folder_a1/notes/: project-notes.txt
sample_data/hero/: normalization.csv
sample_data/hero/metadata/: metadata.csv
src/name_atlas/: __init__.py  app.py  artifacts.py  cases.py  cli.py  config.py  connected_browser_cli.py  connected_cli.py  connected_planner_runtime.py  connected_web_service.py  decisions.py  folder_app.py  folder_job_service.py  foldweave_browser_cli.py  foldweave_chatgpt_mcp.py  foldweave_companion.py  foldweave_companion_cli.py  foldweave_companion_client.py  foldweave_companion_supervisor.py  foldweave_demo_cli.py  foldweave_host_service.py  foldweave_job_locator.py  foldweave_launcher.py  foldweave_local_handles.py  foldweave_native_cli.py  foldweave_pairing_service.py  foldweave_public_mcp_contract.py  foldweave_review_cli.py  foldweave_web_service.py  launcher.py  mcp_contracts.py  mcp_server.py  mcp_service.py  native_bridge.py  native_settings.py  package_import.py  ports.py  proposals.py  receipts.py  receiver_verifier.py  (+3 more)
src/name_atlas/decision_cards/: __init__.py  budget.py  errors.py  evidence.py  models.py  providers.py  service.py
src/name_atlas/domain/: __init__.py  contracts.py
src/name_atlas/folder_refactor/: __init__.py  compiler.py  contracts.py  foldweave_host_contracts.py  foldweave_planning_contracts.py  inventory.py  job.py  live_planner_policy.py  live_planner_provider.py  markdown_links.py  naming.py  planner.py  planner_contracts.py  planner_evidence.py  portable_artifacts.py  receipt_builder.py  receipt_contracts.py  receipt_verifier.py  reconstruction.py  serialization.py  transaction.py
src/name_atlas/static/: folder.css  styles.css
src/name_atlas/templates/: _atlas.html  _decide.html  _handoff.html  _stage.html  _verify.html  index.html
tests/: connected_change_fixtures.py  test_app.py  test_bag_writer.py  test_bagit_validator.py  test_blueprint_assets.py  test_budget.py  test_case_authority.py  test_case_staleness.py  test_cases.py  test_cli.py  test_config.py  test_connected_change_c0.py  test_connected_change_cli.py  test_connected_change_contracts.py  test_connected_change_job_service.py  test_connected_change_job_v2.py  test_connected_change_matcher.py  test_connected_change_organized_tree.py  test_connected_change_planning.py  test_connected_change_reconstruction.py  test_connected_change_verifier_hardening.py  test_connected_web_c2.py  test_decision_cards.py  test_folder_a3_end_to_end.py  test_folder_app_a1.py  test_folder_app_a2.py  test_folder_app_a3.py  test_folder_inventory.py  test_folder_job_a3.py  test_folder_job_service.py  test_folder_markdown_links.py  test_folder_planner_provider.py  test_folder_plans.py  test_folder_portable_artifacts.py  test_folder_receipt_builder.py  test_folder_receipt_contracts.py  test_folder_receipt_verifier.py  test_folder_reconstruction.py  test_folder_transaction_a1.py  test_foldweave_browser_f0a.py  (+39 more)
web/: package.json  vite.config.ts
web/chatgpt-widget-assets/: _headers
web/src/: chatgpt-bridge.ts  chatgpt-contracts.ts  chatgpt-widget.css  chatgpt-widget.test.tsx  chatgpt-widget.tsx  contracts.ts  env.d.ts  main.tsx  review-island.test.tsx  review-island.tsx  review.css
(+36 files in other folders)
