[project]
name = "reversible-name-atlas"
version = "0.1.0"
description = "A local-first workbench for verified linked-collection migrations."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "bagit>=1.8,<2",
    "fastapi>=0.116,<1",
    "jinja2>=3.1,<4",
    "openai>=1.0,<3",
    "pydantic>=2.12,<3",
    "uvicorn>=0.35,<1",
]

[project.scripts]
name-atlas = "name_atlas.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<10",
    "ruff>=0.14,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/name_atlas"]

[tool.hatch.build.targets.wheel.force-include]
"THIRD_PARTY_NOTICES.md" = "name_atlas/THIRD_PARTY_NOTICES.md"
"sample_data/hero" = "name_atlas/sample_data/hero"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
