[project]
name = "foldweave"
version = "0.1.0"
description = "AI-planned, deterministic changes for connected project folders."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Modern Blueprints" }]
keywords = [
    "connected-folders",
    "file-organization",
    "macos",
    "mcp",
    "review-before-execution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "bagit>=1.8,<2",
    "cryptography>=49,<50",
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "mcp>=1.27,<2",
    "openai>=1.0,<3",
    "pydantic>=2.12,<3",
    "pyobjc-core>=12.2.1,<13 ; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa>=12.2.1,<13 ; sys_platform == 'darwin'",
    "pyobjc-framework-quartz>=12.2.1,<13 ; sys_platform == 'darwin'",
    "pyobjc-framework-security>=12.2.1,<13 ; sys_platform == 'darwin'",
    "pyobjc-framework-webkit>=12.2.1,<13 ; sys_platform == 'darwin'",
    "pywebview>=6.2.1,<7 ; sys_platform == 'darwin'",
    "uvicorn>=0.35,<1",
    "websockets>=15,<16",
]

[project.scripts]
foldweave = "name_atlas.foldweave_launcher:main"
name-atlas = "name_atlas.launcher:main"

[project.urls]
Homepage = "https://github.com/ModernBlueprints/reversible-name-atlas"
Repository = "https://github.com/ModernBlueprints/reversible-name-atlas"
Issues = "https://github.com/ModernBlueprints/reversible-name-atlas/issues"
Documentation = "https://github.com/ModernBlueprints/reversible-name-atlas#readme"

[dependency-groups]
dev = [
    "pyinstaller>=6.21,<7 ; sys_platform == 'darwin'",
    "pytest>=8.4,<10",
    "ruff>=0.14,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/name_atlas"]

[tool.hatch.build.targets.wheel.force-include]
"THIRD_PARTY_NOTICES.md" = "name_atlas/THIRD_PARTY_NOTICES.md"
"sample_data/connected_change" = "name_atlas/sample_data/connected_change"
"sample_data/hero" = "name_atlas/sample_data/hero"
"sample_data/folder_a1" = "name_atlas/sample_data/folder_a1"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.env*",
    "/.name-atlas/**",
    "/.venv/**",
    "/build/**",
    "/dist/**",
    "/docs/build/**",
    "/gateway/.wrangler/**",
    "/gateway/dist/**",
    "/gateway/node_modules/**",
    "/web/dist/**",
    "/web/node_modules/**",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
